console/console.css
body {
    margin: 0px;
    padding: 0px;
    width: 100%;
    position: absolute;
    bottom: 0px;
}

body * {
    margin: 0px;
    padding: 0px;
    border: none;
    font-family: monospace;
}

#ex_candidates {
    list-style-type: none;
    white-space: nowrap;
    overflow: auto;
}
#ex_candidates > li {
    line-height: calc(1em + 3px);
}
#ex_candidates > li > span {
    display: inline-block;
    text-overflow: ellipsis;
    overflow: hidden;
    box-sizing: border-box;
    vertical-align: middle;
}
span.candidate_icon {
    height: 1em;
    width: 1em;
    margin-right: 4px;
    background-repeat: no-repeat;
    background-size: contain;
}
span.candidate_id {
    width: 2em;
}
span.candidate_data {
    width: calc(50% - 4em - 4px);
}
span.candidate_separator {
    width: 1em;
}
span.candidate_info {
    width: 50%;
}

#ex_console[mode="exec"]::before {
    content: ":";
}
#ex_console[mode="forwardSearch"]::before {
    content: "/";
}
#ex_console[mode="backwardSearch"]::before {
    content: "?";
}
#ex_console[mode="hintFilter"]::before {
    content: "/";
}

#ex_input {
    box-sizing: border-box;
    width: calc(100% - 1em);
    background-color: transparent;
}

#ex_message {
    box-sizing: border-box;
    width: 100%;
    display: none;
}
#ex_console[mode="showMessage"] > #ex_input {
    display: none;
}
#ex_console[mode="showMessage"] > #ex_message {
    display: block;
}

